# navidrome-lrclib-plugin

./: .gitignore  Cargo.toml  README.md  lrclib-lyrics.ndp  manifest.json
src/: cache.rs  config.rs  lib.rs  lrc.rs  lrclib.rs  registry.rs  storage.rs  writing.rs
src/providers/: lrclib.rs  lyrics_ovh.rs  mod.rs
