[package]
name = "navidrome-lrclib-plugin"
version = "4.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
flate2 = "1"
nd-pdk = { git = "https://github.com/navidrome/navidrome", subdir = "plugins/pdk/rust/nd-pdk" }
percent-encoding = "2.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
